<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/sortBy"
        android:orderInCategory="1"
        android:title="@string/menu_sortBy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/by_pop"
        android:title="@string/menu_sortByPop"
        app:showAsAction="never" />
    <item
        android:id="@+id/by_rating"
        android:title="@string/menu_sortByRating"
        app:showAsAction="never" />

    <item
        android:id="@+id/by_favourite"
        android:title="@string/menu_starred"
        app:showAsAction="never" />
</menu>